播放功能实现

--- a/src/assets/css/base.scss
+++ b/src/assets/css/base.scss
@@ -33,3 +33,11 @@ li {
   list-style: none;
 }
 
+#app .is-active {
+  border-bottom-color: #ea5555;
+}
+#app .el-footer {
+  border-top: 1px solid #ccc;
+}
+
+
