--- a/src/assets/font/iconfont.css
+++ b/src/assets/font/iconfont.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "iconfont"; /* Project id  */
-  src: url('iconfont.ttf?t=1651421100933') format('truetype');
+  src: url('iconfont.ttf?t=1652081400167') format('truetype');
 }
 
 .iconfont {
@@ -11,8 +11,16 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-refresh:before {
+  content: "\e6a4";
+}
+
 .icon-showpassword:before {
   content: "\ea3f";
+}
+
+.icon-refresh1:before {
+  content: "\e66a";
 }
 
 .icon-users:before {
